# cookiecutter-dj-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{cookiecutter.project_slug}}/: README.md  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/configs/: asgi.py  env.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/configs/library_configs/: __init__.py  celery.py
{{cookiecutter.project_slug}}/configs/settings/: base.py  development.py  staging.py
{{cookiecutter.project_slug}}/configurations/: asgi.py  env.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/configurations/settings/: base.py  development.py  production.py
{{cookiecutter.project_slug}}/logging_configs/: __init__.py  base.py  development.py  env.py  production.py
