[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}",email = "{{ cookiecutter.email }}"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "django (>=6.0.6,<7.0.0)",

    {% if cookiecutter.use_djangorestframework == "yes" -%}
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "django-filter (>=25.1,<26.0)",
    {% endif -%}

    "django-grappelli (>=4.0.2,<5.0.0)",

    {% if cookiecutter.use_celery == "yes" -%}
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    {% endif -%}

    "gunicorn (>=23.0.0,<24.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",

]

{% if cookiecutter.use_drf_spectacular == "yes" -%}
[tool.poetry.group.docs.dependencies]
drf-spectacular = "^0.28.0"
{% endif -%}


[tool.poetry.group.log.dependencies]
python-json-logger = "^4.1.0"
django-guid = "^3.5.2"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
